[package]
name = "ag-account-cli"
version = "0.1.0"
edition = "2021"
authors = ["code-sharad <codesharad@gmail.com>"]
description = "A CLI tool for displaying Antigravity account usage and quotas"
license = "MIT"
repository = "https://github.com/code-sharad/ag-account-cli"
homepage = "https://github.com/code-sharad/ag-account-cli"
readme = "README.md"
keywords = ["cli", "antigravity", "quota", "monitor"]
categories = ["command-line-utilities"]

[[bin]]
name = "ag-tui"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
